--- a/SSubpagina.css
+++ b/SSubpagina.css
@@ -18,73 +18,66 @@
 
 /* add your css here, feel free to use comments and order them logically for better readability */
 * {
-   margin: 0;
- }
-  
- body {
-   background-color: #d291b8ff;
- }
-  
- #wrapper {
-   background-color: #d291b8ff;
-   height: 100vh;
-   padding: 10px;
-   margin: auto;
- }
-  
- header {
-   background-color: #b76798ff;
-   width: 100%;
-   height: auto;
-   margin-bottom: 10px;
-   text-align: center;
-   font-size: xx-large;
- }
-  
- #hoofd {
-  background-color: #e0a6d0;
-  padding: 5px;
-   width: 65%;
-   height: 90%;
-   margin: 10px 10px 10px 10px;
-   cursor: pointer;
-   float: left;
- }
-
- #extra {
+  margin: 0;
+}
+ 
+body {
   background-color: #d291b8ff;
+}
+ 
+#wrapper {
+  background-color: #d291b8ff;
+  height: 100vh;
+  padding: 10px;
+  margin: auto;
+}
+ 
+header {
+  background-color: #b76798ff;
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+  text-align: center;
+  font-size: xx-large;
+}
+ 
+#hoofd {
+ background-color: #e0a6d0;
   padding: 5px;
-  width: 17%;
-  height: 45%;
+  width: 85%;
+  height: 98%;
   margin: 1% 1% 1% 1%;
   cursor: pointer;
-  float: right;
- }
-
-#png {
-  background-color:#d291b8ff;
-  width: 18%;
-  height: 40%;
-  margin: 1% 1% 1% 1%;
-  float: right;
- 
+  float: left;
 }
 
-
- nav {
+#onderbalk {
   background-color: #e0a6d0;
-  padding: 5px;
-  float: left;
-  width: 10%;
-  height: 90%;
-  margin: 10px 10px 10px 10px;
- }
-  
- footer {
-   clear: both;
-   background-color: #b76798ff;
-   width: 100%;
-   height: 13%;
-   text-align: center;
+  width: 98%;
+  height: 5%;
+  float: right;
+  text-align: center;
+  margin: 0% 1% 1% 1%;
+}
 
- }
+nav {
+ background-color: #e0a6d0;
+ padding: 5px;
+ float: left;
+ width: 10%;
+ height: 98%;
+ margin: 10px 10px 10px 10px;
+}
+ 
+footer {
+  clear: both;
+  background-color: #b76798ff;
+  padding: 5px;
+  width: 100%;
+  height: 13%;
+  text-align: center;
+}
+
+h1 {
+  text-align: center;
+}
