--- a/SSubpagina.css
+++ b/SSubpagina.css
@@ -39,6 +39,7 @@ header {
   margin-bottom: 10px;
   text-align: center;
   font-size: xx-large;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
  
 #hoofd {
@@ -49,6 +50,7 @@ header {
   margin: 1% 1% 1% 1%;
   cursor: pointer;
   float: left;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #onderbalk {
@@ -58,6 +60,7 @@ header {
   float: right;
   text-align: center;
   margin: 0% 1% 1% 1%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 nav {
@@ -67,6 +70,7 @@ nav {
  width: 10%;
  height: 98%;
  margin: 10px 10px 10px 10px;
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
  
 footer {
@@ -76,6 +80,7 @@ footer {
   width: 100%;
   height: 13%;
   text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h1 {
